--- a/Pageblog-details.html
+++ b/Pageblog-details.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Green Shop | Page Blog</title>
+    <title>Green Shop | Blog-Details Page</title>
     <!-- Styles-->
     <link href="./assets/css/styles.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
@@ -145,29 +145,9 @@
             </div>
           </div>
           <div class="has-sidebar__content">
-            <div class="blog">
+            <div class="blog blog__single">
                   <article>
                     <div class="blog__title"><a href="#">Cách bố trí hoa chậu trước cửa ấn tượng ngay lần đầu tiên</a></div>
-                    <ul class="blog__post">
-                      <li class="blog__post--date"><span><i class="fas fa-calendar-week"></i></span><a href="#">20/12/2015</a></li>
-                      <li class="blog__post--time"><span><i class="far fa-clock"></i></span><a href="#">11:20:00 AM</a></li>
-                      <li class="blog__post--comment"><span><i class="far fa-comment-dots"></i></span><a href="#">0 Bình luận</a></li>
-                    </ul>
-                    <div class="blog__img"><a href="#"><img src="../../../assets/images/blog/04.jpg" alt="images"></a></div>
-                    <p>Như thể hiện sự thân thiện cũng như sự hiếu khách của gia chủ, phần không gian trước cửa nhà luôn được đầu tư và trang trí khá bắt mắt. Cũng có thể nói đây là bộ mặt của ngôi nhà, là ấn tượng đầu tiên khzi một vị khách ghé chơi nhà bạn đấy. Hãy cùng Sài Gòn Hoa tham khảo một vài cách bố trí chậu cây hoa cảnh ngay trước cửa nhà sao cho ấn tượng nhất nhé!</p>
-                  </article>
-                  <article>
-                    <div class="blog__title"><a href="#">Hướng dẫn lựa chọn và bố trí cây xanh trong phòng khách</a></div>
-                    <ul class="blog__post">
-                      <li class="blog__post--date"><span><i class="fas fa-calendar-week"></i></span><a href="#">20/12/2015</a></li>
-                      <li class="blog__post--time"><span><i class="far fa-clock"></i></span><a href="#">11:20:00 AM</a></li>
-                      <li class="blog__post--comment"><span><i class="far fa-comment-dots"></i></span><a href="#">0 Bình luận</a></li>
-                    </ul>
-                    <div class="blog__img"><a href="#"><img src="../../../assets/images/blog/05.jpg" alt="images"></a></div>
-                    <p>Như thể hiện sự thân thiện cũng như sự hiếu khách của gia chủ, phần không gian trước cửa nhà luôn được đầu tư và trang trí khá bắt mắt. Cũng có thể nói đây là bộ mặt của ngôi nhà, là ấn tượng đầu tiên khzi một vị khách ghé chơi nhà bạn đấy. Hãy cùng Sài Gòn Hoa tham khảo một vài cách bố trí chậu cây hoa cảnh ngay trước cửa nhà sao cho ấn tượng nhất nhé!</p>
-                  </article>
-                  <article>
-                    <div class="blog__title"><a href="#">7 loại cây xanh để bàn đang được giới văn phòng ưa chuộng</a></div>
                     <ul class="blog__post">
                       <li class="blog__post--date"><span><i class="fas fa-calendar-week"></i></span><a href="#">20/12/2015</a></li>
                       <li class="blog__post--time"><span><i class="far fa-clock"></i></span><a href="#">11:20:00 AM</a></li>
@@ -176,16 +156,77 @@
                     <div class="blog__img"><a href="#"><img src="../../../assets/images/blog/06.jpg" alt="images"></a></div>
                     <p>Như thể hiện sự thân thiện cũng như sự hiếu khách của gia chủ, phần không gian trước cửa nhà luôn được đầu tư và trang trí khá bắt mắt. Cũng có thể nói đây là bộ mặt của ngôi nhà, là ấn tượng đầu tiên khzi một vị khách ghé chơi nhà bạn đấy. Hãy cùng Sài Gòn Hoa tham khảo một vài cách bố trí chậu cây hoa cảnh ngay trước cửa nhà sao cho ấn tượng nhất nhé!</p>
                   </article>
+              <p>7 loại cây xanh để bàn đang được giới văn phòng ưa chuộng, Những mẫu cây để bàn đang được giới văn phòng ưa chuộng, cây cảnh văn phòng để bàn thông dụng, những cây cảnh được giới văn phòng ưa chuộng</p>
+              <p>Cây bạch mã hoàng tử để bàn có chiều cao trung bình từ 20 – 40cm, dáng đẹp, lá cây màu xanh đậm với những đường vân vàng nhạt mọc đối xứng nhau trông rất sang trọng và lịch lãm.</p>
+              <p>Loại cây này ưa bóng, chịu được nhiệt độ thấp lại có khả năng tạo ẩm và thanh lọc không khí nên rất thích hợp đặt trong văn phòng làm việc có máy lạnh.</p>
+              <p>Cây bạch mã hoàng tử thường được chọn để đặt trên bàn làm việc của sếp, bàn nhỏ ở phòng tiếp khách hoặc bàn làm việc của các đấng mày râu.</p>
+              <p>2. Cây trầu bà đế vương</p>
+              <p>Cây trầu bà đế vương tượng trưng cho quyền uy, phong thái dẫn đầu nên thích hợp để đặt trên bàn làm việc của người lãnh đạo, quản lý doanh nghiệp.</p>
+              <p>Lá cây trầu bá đế vương khá to, dày, hơi bóng, đường gân rõ ràng, có hình dạng như hình trái tim, xòe rộng hướng lên trên trông rất bệ nghễ và cao sang.</p>
+              <p>Tùy thuộc vào sở thích cá nhân và thiết kế chủ đạo của không gian phòng làm việc, bạn có thể chọn loại trầu bà đế vương xanh, trầu bá đế vương vàng hoặc trầu bà đế vương đỏ.</p>
+              <div class="blog__img"><img src="../../../../assets/images/blog/04.jpg" alt="images"></div>
+              <p>Như thể hiện sự thân thiện cũng như sự hiếu khách của gia chủ, phần không gian trước cửa nhà luôn được đầu tư và trang trí khá bắt mắt. Cũng có thể nói đây là bộ mặt của ngôi nhà, là ấn tượng đầu tiên khzi một vị khách ghé chơi nhà bạn đấy. Hãy cùng Sài Gòn Hoa tham khảo một vài cách bố trí chậu cây hoa cảnh ngay trước cửa nhà sao cho ấn tượng nhất nhé!</p>
+              <p>7 loại cây xanh để bàn đang được giới văn phòng ưa chuộng, Những mẫu cây để bàn đang được giới văn phòng ưa chuộng, cây cảnh văn phòng để bàn thông dụng, những cây cảnh được giới văn phòng ưa chuộng</p>
             </div>
-            <div class="pagination">
-              <ul>
-                    <li><a href="#">Trang trước</a></li>
-                    <li><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li><a href="#">Trang sau</a></li>
+            <div class="comments">
+              <h4 class="title__small">bình luận (3)</h4>
+              <ul class="comment__list">
+                <li>
+                      <div class="comment-box">
+                        <div class="comment-box__avatar"><img src="../../../assets/images/blog/07.jpg" alt="images"></div>
+                        <div class="comment-box__content">
+                          <h3 class="comment-box__content--name">Nguyễn Văn An</h3>
+                          <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+                          <div class="comment-box__content--time"><span class="time">Thứ 7, 26/12/2015 12: 00 AM</span></div>
+                        </div>
+                        <div class="comment-box__reply"><a href="#">Trả lời</a></div>
+                      </div>
+                </li>
+                <li class="comment__list--reply">
+                      <div class="comment-box">
+                        <div class="comment-box__avatar"><img src="../../../assets/images/blog/07.jpg" alt="images"></div>
+                        <div class="comment-box__content">
+                          <h3 class="comment-box__content--name">Nguyễn Văn An</h3>
+                          <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+                          <div class="comment-box__content--time"><span class="time">Thứ 7, 26/12/2015 12: 00 AM</span></div>
+                        </div>
+                        <div class="comment-box__reply"><a href="#">Trả lời</a></div>
+                      </div>
+                </li>
+                <li>
+                      <div class="comment-box">
+                        <div class="comment-box__avatar"><img src="../../../assets/images/blog/07.jpg" alt="images"></div>
+                        <div class="comment-box__content">
+                          <h3 class="comment-box__content--name">Nguyễn Văn An</h3>
+                          <p class="description">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+                          <div class="comment-box__content--time"><span class="time">Thứ 7, 26/12/2015 12: 00 AM</span></div>
+                        </div>
+                        <div class="comment-box__reply"><a href="#">Trả lời</a></div>
+                      </div>
+                </li>
               </ul>
+            </div>
+            <div class="w-comment">
+              <h4 class="title__small">viết bình luận:</h4>
+              <form class="w-comment__form" action="#">
+                <div class="w-comment__top">
+                      <div class="w-comment__top--input">
+                        <input placeholder="Họ và tên:" type="text">
+                      </div>
+                      <div class="w-comment__top--input">
+                        <input placeholder="Email:" type="text">
+                      </div>
+                      <div class="w-comment__top--input">
+                        <input placeholder="Phone:" type="text">
+                      </div>
+                </div>
+                <div class="w-comment__bottom">
+                  <textarea placeholder="Bình luận" type="text"></textarea>
+                </div>
+                <div class="w-comment__btn">
+                  <button class="btn__common">gửi</button>
+                </div>
+              </form>
             </div>
           </div>
         </div>
