PagePopup and fix header and footer

--- a/Pageblog-details.html
+++ b/Pageblog-details.html
@@ -18,8 +18,7 @@
             <div class="topbar__left--social"><a href="#"><i class="fab fa-facebook-f"></i></a><a href="#"><i class="fab fa-twitter"></i></a><a href="#"><i class="fab fa-instagram"></i></a><a href="#"><i class="fab fa-vimeo"></i></a></div>
           </div>
           <div class="topbar__right">
-            <div class="topbar__right--signin"><i class="fas fa-user"></i><a class="icons-login" href="#">Đăng nhập</a></div>
-            <div class="topbar__right--signup"><i class="fas fa-user-plus"></i><a class="icons-register" href="#">Đăng kí</a></div>
+            <div class="topbar__right--signin"><i class="fas fa-user"><a class="icons-login" href="#">Đăng nhập</a></i><i class="fas fa-user-plus"><a class="icons-register" href="#">Đăng kí</a></i></div>
           </div>
         </div>
       </div>
@@ -241,8 +240,7 @@
               <div class="widget__intro--social"><a href="#"><i class="fab fa-facebook-f"></i></a><a href="#"><i class="fab fa-twitter"></i></a><a href="#"><i class="fab fa-instagram"></i></a><a href="#"><i class="fab fa-vimeo"></i></a></div>
             </div>
             <div class="widget__intro">
-              <div class="widget__intro--signin">Đăng ký nhận </div>
-              <div class="widget__intro--email">email từ chúng tôi</div>
+              <div class="widget__intro--email">đăng ký nhận email từ chúng tôi</div>
             </div>
             <div class="widget__search">
               <form class="widget__search--subcribe" action="#" method="post">
