--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Green Shop | Home Page</title>
+    <title>Green Shop | Popup Page</title>
     <!-- Styles-->
     <link href="./assets/css/styles.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
@@ -445,6 +445,24 @@
         </div>
       </div>
     </section>
+    <div class="popup">
+      <div class="popup__background">
+        <div class="popup__img"><img src="../../../../assets/images/popup/01.png" alt="images"></div>
+        <div class="popup__content">
+          <h3 class="popup__content--title">Đăng ký email ngay hôm ngay</h3>
+          <form class="popup__form" action="#" method="post">
+            <input placeholder="Nhập email của bạn vào đây" type="text">
+            <button><i class="fa fa-paper-plane"></i></button>
+          </form>
+          <p>Đăng ký email ngay hôm nay để nhận các thông tin về sự kiện và các trương chình giảm giá từ chúng tôi</p>
+          <div class="checkbox">
+            <input class="checkbox__inp" id="cbx" type="checkbox">
+            <label class="checkbox__custom" for="cbx"><span class="checkbox__custom--tick"></span><span class="checkbox__custom--text">Không hiển thị lại thông báo này nữa </span></label>
+          </div>
+        </div>
+        <div class="popup__close"><i class="fa fa-times"></i></div>
+      </div>
+    </div>
     <footer class="footer">
       <div class="widget__first">
         <div class="container">
